--- a/index2.html
+++ b/index2.html
@@ -59,8 +59,9 @@
       </div>
       <div class="index2-sub-space2">
         <div class="index2-sub-space2-1">
-          <img src="img/rick-morty.jpg" alt="img" width="45%" />
+          <div id="image-space"></div>
         </div>
+        
       </div>
       <div class="index2-sub-space3">
         <div id="hints" class="index2-sub-space3-1">
@@ -73,25 +74,25 @@
 
       <div class="index2-sub-space4">
         <div class="index2-sub-space4-1">
-          <button class="ans-op" id="ans-btn1">helladfadasfsao</button>
+          <button class="ans-op" id="ans-btn1" style="width: 300px;"><p id="ans"></p></button>
         </div>
         <div class="index2-sub-space4-2">
-          <button class="ans-op" id="ans-btn2">swastadfadfasdfaik</button>
+          <button class="ans-op" id="ans-btn2" style="width: 300px;"><p id="ans2"></p></button>
         </div>
       </div>
       <div class="index2-sub-space5">
         <div class="index2-sub-space5-1">
-          <button class="ans-op" id="ans-btn3">gowdsdfasdfasdfaa</button>
+          <button class="ans-op" id="ans-btn3" style="width: 300px;"><p id="ans3"></p></button>
         </div>
         <div class="index2-sub-space5-2">
-          <button class="ans-op" id="ans-btn4">senpaiasdfasdfasd</button>
+          <button class="ans-op" id="ans-btn4" style="width: 300px;"><p id="ans4"></p></button>
         </div>
       </div>
 
       <div class="index2-sub-space6">
-        <div class="index2-sub-space6-1">timer</div>
-        <div id=app> </div>
-        <div id='root'></div>
+        <div class="index2-sub-space6-1"></div>
+        <div id="app"> </div>
+        <div id="root"></div>
       </div>
     </div>
 
@@ -111,8 +112,6 @@
     </script>
     <script src="js/char.js"></script>   
     <script src="js/timer.js"></script>
-    <script src="js/quiz.js"></script>
-
 
     <!-- Place any js cdn scripts here-->
 
