quiz.js update-1

--- a/index2.html
+++ b/index2.html
@@ -54,8 +54,8 @@
       <div class="index2-sub-space2">
         <div class="index2-sub-space2-1">
           <img src="#" id="question-img" alt="img" width="75%" />
+          <p id="forq2"></p>
         </div>
-        
       </div>
       <div class="index2-sub-space3">
         <div id="hints" class="index2-sub-space3-1">
@@ -67,18 +67,18 @@
 
       <div class="index2-sub-space4">
         <div class="index2-sub-space4-1">
-          <button class="ans-op" id="ans-btn1" style="width: 300px;"></button>
+          <button class="ans-op" id="ans-btn1" style="width: 300px"></button>
         </div>
         <div class="index2-sub-space4-2">
-          <button class="ans-op" id="ans-btn2" style="width: 300px;"></button>
+          <button class="ans-op" id="ans-btn2" style="width: 300px"></button>
         </div>
       </div>
       <div class="index2-sub-space5">
         <div class="index2-sub-space5-1">
-          <button class="ans-op" id="ans-btn3" style="width: 300px;"></button>
+          <button class="ans-op" id="ans-btn3" style="width: 300px"></button>
         </div>
         <div class="index2-sub-space5-2">
-          <button class="ans-op" id="ans-btn4" style="width: 300px;"></button>
+          <button class="ans-op" id="ans-btn4" style="width: 300px"></button>
         </div>
       </div>
 
