--- a/index2.html
+++ b/index2.html
@@ -47,12 +47,12 @@
     <div class="index2-main-space">
       <div class="index2-sub-space1">
         <div class="index2-sub-space1-1">
-          <span class="question-style" id="question-num">1.&nbsp;</span>
+          <span class="question-style" id="question-num"></span>.&nbsp;
           <span class="question-style" id="question"></span>
         </div>
       </div>
       <div class="index2-sub-space2">
-        <div class="index2-sub-space2-1">
+        <div id="index2-sub-space2-1" class="index2-sub-space2-1">
           <img src="#" id="question-img" alt="img" width="75%" />
           <p id="forq2"></p>
         </div>
@@ -83,9 +83,12 @@
       </div>
 
       <div class="index2-sub-space6">
-        <div class="index2-sub-space6-1"></div>
+        <div id="index2-sub-space6-1" class="index2-sub-space6-1"></div>
+        <div id="time-left">Total time left to answer <span style="color:white;" id="question-left"></span> questions</div> 
+       <div id="clock">
         <div id="app"></div>
         <div id="root"></div>
+      </div>
       </div>
     </div>
 
@@ -98,7 +101,7 @@
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/quiz.js"></script>
+    <script src="js/quiz2.js"></script>
     <script src="js/wow.min.js"></script>
     <script>
       new WOW().init();
