--- a/index2.html
+++ b/index2.html
@@ -41,10 +41,10 @@
     <meta name="theme-color" content="#fafafa" />
   </head>
 
-  <body>
+  <body >
     <!-- Add your site or application content here -->
 
-    <div class="index2-main-space">
+    <div class="index2-main-space" id="body-id" >
       <div class="index2-sub-space1">
         <div class="index2-sub-space1-1">
           <span class="question-style" id="question-num"></span>.&nbsp;
@@ -67,18 +67,18 @@
 
       <div class="index2-sub-space4">
         <div class="index2-sub-space4-1">
-          <button class="ans-op" id="ans-btn1" style="width: 300px"></button>
+          <button class="ans-op" id="ans-btn1" ></button>
         </div>
         <div class="index2-sub-space4-2">
-          <button class="ans-op" id="ans-btn2" style="width: 300px"></button>
+          <button class="ans-op" id="ans-btn2" ></button>
         </div>
       </div>
       <div class="index2-sub-space5">
         <div class="index2-sub-space5-1">
-          <button class="ans-op" id="ans-btn3" style="width: 300px"></button>
+          <button class="ans-op" id="ans-btn3"></button>
         </div>
         <div class="index2-sub-space5-2">
-          <button class="ans-op" id="ans-btn4" style="width: 300px"></button>
+          <button class="ans-op" id="ans-btn4" ></button>
         </div>
       </div>
 
