--- a/indexlast.html
+++ b/indexlast.html
@@ -58,22 +58,22 @@
     
 </div>    
 </div>
-<br>
-<div class="sub-space-ele2">
+
+<!-- <div class="sub-space-ele2">
 
     <div class="share-btn">share on <i class="fi-cnluxl-facebook-circle icon"></i></div>
     <div class="share-btn">share on <i class="fi-xnsuxl-instagram icon"></i></div>
 
 </div>
 <br>
-    <br>
-<div class="sub-space-ele3">
+    <br> -->
+<!-- <div class="sub-space-ele3">
 
   <p class="leaderboard">Leaderboard</p>
 
-</div>
+</div> -->
 
-<div class="sub-space-ele4">
+<!-- <div class="sub-space-ele4">
   <center>
 <table class="table-style">
 <thead class="table-heading">
@@ -104,7 +104,7 @@
 
 </table>
 </center>
-</div>
+</div> -->
 <br>
 <div class="sub-space-ele5">
 
