--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Rick and morty trivia</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
 
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
+  <!-- Primary Meta Tags -->
+<title>Rick and Morty Trivia</title>
+<meta name="title" content="Rick and Morty Trivia">
+<meta name="description" content="This is the most sophisticated Rick and Morty Trivia ever developed , ace this trivia and prove that you are a true Rick and Morty fan 🤪">
+
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://metatags.io/">
+<meta property="og:title" content="Rick and Morty Trivia">
+<meta property="og:description" content="This is the most sophisticated Rick and Morty Trivia ever developed , ace this trivia and prove that you are a true Rick and Morty fan 🤪">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:title" content="Rick and Morty Trivia">
+<meta property="twitter:description" content="This is the most sophisticated Rick and Morty Trivia ever developed , ace this trivia and prove that you are a true Rick and Morty fan 🤪">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -71,7 +85,7 @@
         <button class="slideUpBtn slideUpBtn3" id="btn3">HARD</button>
       </div>
       <div class="main-space-mobele"></div>
-      <div class="main-space-ele5">
+      <!-- <div class="main-space-ele5">
         <div
           style="width: 8%; height: 0; padding-bottom: 8%; position: relative"
         >
@@ -100,7 +114,7 @@
             >Trap City</a
           >
         </div>
-      </div>
+      </div> -->
       <div class="main-space-ele6">
         <a
           target="_blank"
