--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://metatags.io/">
+<meta property="og:url" content="https://swastikgowdal.github.io/rick-and-morty-project/">
 <meta property="og:title" content="Rick and Morty Trivia">
 <meta property="og:description" content="This is the most sophisticated Rick and Morty Trivia ever developed , ace this trivia and prove that you are a true Rick and Morty fan 🤪">
-<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="og:image" content="rick-morty.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:url" content="https://swastikgowdal.github.io/rick-and-morty-project/">
 <meta property="twitter:title" content="Rick and Morty Trivia">
 <meta property="twitter:description" content="This is the most sophisticated Rick and Morty Trivia ever developed , ace this trivia and prove that you are a true Rick and Morty fan 🤪">
-<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="twitter:image" content="rick-morty.jpg">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
