--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <button class="slideUpBtn slideUpBtn3" id="btn3">HARD</button>
       </div>
       <div class="main-space-mobele"></div>
-      <!-- <div class="main-space-ele5">
+      <div class="main-space-ele5">
         <div
           style="width: 8%; height: 0; padding-bottom: 8%; position: relative"
         >
@@ -114,7 +114,7 @@
             >Trap City</a
           >
         </div>
-      </div> -->
+      </div>
       <div class="main-space-ele6">
         <a
           target="_blank"
