--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <meta property="twitter:description" content="This is the most sophisticated Rick and Morty Trivia ever developed , ace this trivia and prove that you are a true Rick and Morty fan 🤪">
 <meta property="twitter:image" content="rick-morty.jpg">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
     <link
